# tide

./: .gitignore  Cargo.toml  README.md  config.toml
.github/workflows/: release.yml
Formula/: tide.rb
scripts/: update_version.sh
src/: banner.rs  main.rs  requests.rs
tests/: integration_test.rs
